# crankshaft.core

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  QUICK_REFERENCE.md  README.md  devhost.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: copilot-instructions.md
.github/prompts/: plan-crankshaftMvp.prompt.md  plan-featureFlagsLicensingTiers.prompt.md  splitWorkflows.prompt  translations.prompt
.github/workflows/: build-pi-gen-lite.yml  build.yml  cd.yml  changelog.yml  ci.yml  release-from-pi-gen.yml  trigger-apt-publish.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
cmake/: DownloadMaterialDesignIcons.cmake  build_info.h.in
config/: crankshaft.json
core/: CMakeLists.txt  CMakeLists.txt.backup  ConfigService.cpp  ConfigService.h  EventBus.cpp  EventBus.h  Logger.cpp  Logger.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
core/hal/: CMakeLists.txt
core/hal/functional/: AudioDeviceImpl.cpp  AudioManagerImpl.cpp  BluetoothManagerImpl.cpp  CANDevice.cpp  CANDevice.h  CMakeLists.txt  FunctionalDevice.cpp  FunctionalDevice.h  GPSDevice.cpp  GPSDevice.h  MediaPipelineImpl.cpp  NetworkServiceImpl.cpp  VideoManagerImpl.cpp  WiFiManagerImpl.cpp
core/hal/mocks/transport/: MockTransport.cpp  MockTransport.h
core/hal/multimedia/: AudioDevice.h  AudioHAL.cpp  AudioHAL.h  AudioManager.h  AudioMixer.cpp  AudioMixer.h  GStreamerVideoDecoder.cpp  GStreamerVideoDecoder.h  IAudioMixer.cpp  IAudioMixer.h  IVideoDecoder.cpp  IVideoDecoder.h  MediaPipeline.cpp  MediaPipeline.h  VideoDevice.h  VideoHAL.cpp  VideoHAL.h  VideoManager.h
core/hal/transport/: Transport.cpp  Transport.h  UARTTransport.cpp  UARTTransport.h
core/hal/wireless/: BluetoothHAL.cpp  BluetoothHAL.h  BluetoothManager.h  NetworkService.cpp  NetworkService.h  WiFiHAL.cpp  WiFiHAL.h  WiFiManager.h
core/services/android_auto/: AndroidAutoService.cpp  AndroidAutoService.h  CMakeLists.txt  MockAndroidAutoService.cpp  MockAndroidAutoService.h  ProtocolHelpers.cpp  ProtocolHelpers.h  RealAndroidAutoService.cpp  RealAndroidAutoService.h
core/services/audio/: AudioRouter.cpp  AudioRouter.h
core/services/config/: ConfigService.cpp  ConfigService.h
core/services/diagnostics/: DiagnosticsEndpoint.cpp  DiagnosticsEndpoint.h  MetricsEndpoint.cpp  MetricsEndpoint.h
core/services/driving_mode/: DrivingModeService.cpp  DrivingModeService.h
core/services/eventbus/: EventBus.cpp  EventBus.h
core/services/extensions/: ExtensionManager.cpp  ExtensionManager.h
core/services/logging/: Logger.cpp  Logger.h
core/services/media/: MediaService.cpp  MediaService.h
core/services/preferences/: PreferencesService.cpp  PreferencesService.h
core/services/profile/: ProfileManager.cpp  ProfileManager.h
core/services/service_manager/: ServiceManager.cpp  ServiceManager.h
core/services/session/: SessionStore.cpp  SessionStore.h
core/services/websocket/: WebSocketServer.cpp  WebSocketServer.h
docker/: Dockerfile.build  Dockerfile.test
docs/: ANDROID_AUTO_CHANNELS.md  API.md  API_USAGE_EXAMPLES.md  ARCHITECTURE.md  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CONTRACT_VERSIONING.md  DESIGN_FOR_DRIVING_COMPLIANCE.md  DESIGN_FOR_DRIVING_IMPLEMENTATION.md  DEVELOPMENT.md  DRIVING_MODE_SAFETY.md  HAL_ARCHITECTURE.md  HAL_IMPLEMENTATION_STATUS.md  HAL_LAYERED_ARCHITECTURE.md  HAL_REFACTORING_STATUS.md  HAL_REFACTORING_SUMMARY.md  IMPLEMENTATION_SETUP_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION_REPORT.md  INTEGRATION_COMPLETE.md  LOCALIZATION_IMPLEMENTATION.md  MATERIAL_DESIGN_ICONS.md  MULTIMEDIA_HAL.md  MULTIMEDIA_QUICKSTART.md  MULTIMEDIA_WIRELESS_ANDROIDAUTO.md  MVP_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_MONITORING.md  PHASES_4_5_6_IMPLEMENTATION_SUMMARY.md  PHASE_8_IMPLEMENTATION_PLAN.md  PHASE_8_PROGRESS_CHECKPOINT_2.md  PHASE_8_PROGRESS_CHECKPOINT_3.md  PHASE_8_PROGRESS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_FINAL.md  PROJECT_STATUS_SESSION_2.md  QUICKSTART_VALIDATION_REPORT.md  QUICK_REFERENCE.md  SETTINGS_SYSTEM.md  SOAK_TEST_GUIDE.md  (+19 more)
docs/examples/: MaterialDesignIconsExample.qml
docs/fix_summaries/: android_auto_mock_service_fix.md  androidauto_settings_migration.md  (+14 more)
scripts/: build.ps1  build.sh  check_license_headers.sh  export_run_logs.ps1  format.sh  format_cpp.sh  generate-ssl-certs.sh  generate_mdi_mappings.py  lint.sh  refactor_hal_architecture.sh  refactor_hal_to_layered.sh  run_tests.sh  test_multimedia_integration.sh
tests/: CMakeLists.txt  test_eventbus.cpp  test_websocket.cpp
tests/benchmarks/: benchmark_aa_connect.sh  benchmark_cold_start.sh  benchmark_media_latency.sh
tests/integration/: soak_test.sh  test_aa_lifecycle.cpp  test_extension_lifecycle.cpp  test_settings_persistence.cpp
tests/stubs/: ServiceManager_stub.cpp
tests/unit/: test_contract_schemas.cpp  test_websocket_validation.cpp
tools/aa_test/: CMakeLists.txt  README.md  build.sh  main.cpp
ui/: .qmllint.ini  .qmlls.ini  CMakeLists.txt  SettingsRegistry.cpp  SettingsRegistry.h  Theme.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp  qmldir
ui/i18n/: ui_de_DE.ts  ui_en_GB.ts  ui_en_US.ts  ui_es_ES.ts  ui_fr_FR.ts
ui/qml/: AndroidAutoScreen.qml  AudioSettingsScreen.qml  ConnectivitySettingsScreen.qml  HomeScreen.qml  Main.qml  SettingsScreen.qml  Strings.qml  VideoSettingsScreen.qml
ui/qml/Components/: AppButton.qml  Card.qml  Icon.qml  qmldir
ui/qml/components/: AppButton.qml  Card.qml  DrivingModeIndicator.qml  Icon.qml  LocaleSelector.qml  SystemClock.qml  Tile.qml  qmldir
ui/qml/models/: AndroidAutoStatus.qml  SettingsModel.qml  Strings.qml
ui/qml/old/: AppButton.qml  Card.qml  Icon.qml  MaterialDesignIcons.js
ui/qml/pages/: ProfilesPage.qml
ui/qml/screens/: AndroidAutoScreen.qml  AndroidAutoSettingsPage.qml  BluetoothSettingsPage.qml  HomeScreen.qml  Main.qml  MediaScreen.qml  SettingsScreen.qml  ToolsPage.qml  WiFiSettingsPage.qml
(+41 files in other folders)
